@@ -46,6 +46,7 @@
 
   <div class="form-actions">
     <%= submit_tag 'Filter Search', class: 'btn btn-primary' %>
+    <%= link_to 'Export Contact List', '#', class: 'btn', data: { target: '#mailings_search', object: 'export', format: 'originalcsv' } %>
     <%= link_to 'Export CSV', '#', class: 'btn', data: { target: '#mailings_search', object: 'export', format: 'csv' } %>
   </div>
 <% end %>
