@@ -3,6 +3,7 @@
 * Enhancements
   * CSV Exports added for:
     * Calls: Patient ID, Subject Code, Call Time, Call Type, Response, Participation, Exclusion, Berlin, ESS, Eligibility, Direction, Comments
+    * Mailings: Patient ID, Subject Code, Sent Date, Response Date, Berlin, ESS, Eligibility, Participation, Exclusion, Comments
   * Data dictionary export updated to include mailings
 
 == 0.7.8
